--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>CrowdInvest - Plataforma de Crowdfunding RCVM 88</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="theme-investidor">
   <div class="page">
     <!-- Header -->
     <header class="header">
