--- a/pages/2fa-codigo-parceiro.html
+++ b/pages/2fa-codigo-parceiro.html
@@ -6,7 +6,7 @@
   <title>Codigo 2FA - Parceiro - CrowdInvest</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="theme-parceiro">
   <div class="auth-page" style="background: linear-gradient(135deg, #059669, #047857);">
     <div class="auth-box">
       <div class="auth-logo">
