--- a/pages/admin-setup-totp-verify.html
+++ b/pages/admin-setup-totp-verify.html
@@ -6,7 +6,7 @@
   <title>Verificar TOTP - Admin - CrowdInvest</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="theme-admin">
   <div class="auth-page" style="background: linear-gradient(135deg, #1e293b, #334155);">
     <div class="auth-box" style="max-width: 500px;">
       <div class="auth-logo">
