--- a/pages/admin/relatorio-visualizar.html
+++ b/pages/admin/relatorio-visualizar.html
@@ -137,7 +137,7 @@
     }
   </style>
 </head>
-<body>
+<body class="theme-admin">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
@@ -162,7 +162,7 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div class="flex gap-10" style="align-items: center;">
