--- a/pages/portal.html
+++ b/pages/portal.html
@@ -85,7 +85,7 @@
       color: white;
     }
     .portal-icon.investidor {
-      background: linear-gradient(135deg, var(--primary), #1d4ed8);
+      background: linear-gradient(135deg, var(--primary), var(--primary-dark));
     }
     .portal-icon.parceiro {
       background: linear-gradient(135deg, #059669, #047857);
