--- a/pages/admin-totp.html
+++ b/pages/admin-totp.html
@@ -6,7 +6,7 @@
   <title>TOTP - Admin - CrowdInvest</title>
   <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="theme-admin">
   <div class="auth-page" style="background: linear-gradient(135deg, #1e293b, #334155);">
     <div class="auth-box">
       <div class="auth-logo">
