--- a/pages/admin/clientes.html
+++ b/pages/admin/clientes.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-admin">
   <div class="dashboard">
     <aside class="sidebar sidebar-dark">
       <div class="sidebar-logo">
@@ -30,7 +30,7 @@
     <div class="mobile-overlay" onclick="closeMobileMenus()"></div>
 
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div>
@@ -96,6 +96,22 @@
         </div>
       </div>
 
+      <!-- Privacy Controls -->
+      <div class="card mb-20" style="padding: 12px 16px; background: #fef3c7; border-color: #fbbf24;">
+        <div class="flex-between" style="flex-wrap: wrap; gap: 10px;">
+          <div class="flex gap-10" style="align-items: center;">
+            <i class="bi bi-shield-lock" style="font-size: 1.2rem; color: #d97706;"></i>
+            <div>
+              <strong style="color: #92400e;">Dados Sensiveis Protegidos</strong>
+              <p class="text-muted" style="font-size: 0.8rem; margin: 0;">CPF e e-mail estao mascarados por padrao. Clique em "Revelar" para visualizar.</p>
+            </div>
+          </div>
+          <button class="btn btn-sm" style="background: #fbbf24; color: #92400e; border: none;" onclick="toggleAllData()">
+            <i class="bi bi-eye" id="toggleIcon"></i> <span id="toggleText">Revelar Todos</span>
+          </button>
+        </div>
+      </div>
+
       <!-- Table -->
       <div class="card">
         <div class="table-container">
@@ -115,9 +131,9 @@
               <tr>
                 <td>
                   <strong>Joao Carlos Silva</strong>
-                  <br><small class="text-muted">joao.silva@email.com</small>
+                  <br><small class="text-muted"><span class="data-masked" data-value="joao.silva@email.com">j***@email.com</span></small>
                 </td>
-                <td>123.456.789-00</td>
+                <td><span class="data-masked" data-value="123.456.789-00">***.456.***-00</span></td>
                 <td>01/01/2026</td>
                 <td>R$ 15.000</td>
                 <td>3</td>
@@ -127,9 +143,9 @@
               <tr>
                 <td>
                   <strong>Maria Santos Lima</strong>
-                  <br><small class="text-muted">maria.lima@email.com</small>
+                  <br><small class="text-muted"><span class="data-masked" data-value="maria.lima@email.com">m***@email.com</span></small>
                 </td>
-                <td>987.654.321-00</td>
+                <td><span class="data-masked" data-value="987.654.321-00">***.654.***-00</span></td>
                 <td>05/01/2026</td>
                 <td>R$ 8.500</td>
                 <td>2</td>
@@ -139,9 +155,9 @@
               <tr>
                 <td>
                   <strong>Pedro Oliveira</strong>
-                  <br><small class="text-muted">pedro.o@email.com</small>
+                  <br><small class="text-muted"><span class="data-masked" data-value="pedro.o@email.com">p***@email.com</span></small>
                 </td>
-                <td>456.789.123-00</td>
+                <td><span class="data-masked" data-value="456.789.123-00">***.789.***-00</span></td>
                 <td>10/01/2026</td>
                 <td>R$ 20.000</td>
                 <td>4</td>
@@ -151,9 +167,9 @@
               <tr>
                 <td>
                   <strong>Carlos Mendes</strong>
-                  <br><small class="text-muted">carlos.m@email.com</small>
+                  <br><small class="text-muted"><span class="data-masked" data-value="carlos.m@email.com">c***@email.com</span></small>
                 </td>
-                <td>111.222.333-44</td>
+                <td><span class="data-masked" data-value="111.222.333-44">***.222.***-44</span></td>
                 <td>15/01/2026</td>
                 <td>R$ 0</td>
                 <td>0</td>
@@ -164,12 +180,15 @@
           </table>
         </div>
 
-        <div class="flex-between mt-20">
-          <p class="text-muted">Mostrando 1-4 de 2.547</p>
-          <div class="flex gap-10">
-            <button class="btn btn-outline btn-sm" disabled>Anterior</button>
-            <button class="btn btn-outline btn-sm">Proximo</button>
-          </div>
+        <div class="pagination-wrapper">
+          <span class="pagination-info">Mostrando <strong>1-4</strong> de <strong>2.547</strong></span>
+          <nav class="pagination-minimal">
+            <button class="page-item nav-arrow disabled"><i class="bi bi-chevron-left"></i></button>
+            <button class="page-item active">1</button>
+            <button class="page-item">2</button>
+            <button class="page-item">3</button>
+            <button class="page-item nav-arrow"><i class="bi bi-chevron-right"></i></button>
+          </nav>
         </div>
       </div>
     </main>
@@ -212,5 +231,34 @@
   </div>
 
   <script src="../../js/app.js"></script>
+  <script>
+    let dataRevealed = false;
+
+    function toggleAllData() {
+      dataRevealed = !dataRevealed;
+      const maskedElements = document.querySelectorAll('.data-masked');
+      const icon = document.getElementById('toggleIcon');
+      const text = document.getElementById('toggleText');
+
+      maskedElements.forEach(el => {
+        if (dataRevealed) {
+          el.setAttribute('data-masked-value', el.textContent);
+          el.textContent = el.getAttribute('data-value');
+          el.classList.add('revealed');
+        } else {
+          el.textContent = el.getAttribute('data-masked-value');
+          el.classList.remove('revealed');
+        }
+      });
+
+      if (dataRevealed) {
+        icon.className = 'bi bi-eye-slash';
+        text.textContent = 'Ocultar Todos';
+      } else {
+        icon.className = 'bi bi-eye';
+        text.textContent = 'Revelar Todos';
+      }
+    }
+  </script>
 </body>
 </html>
