--- a/pages/admin/imposto-renda.html
+++ b/pages/admin/imposto-renda.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-admin">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
@@ -32,18 +32,20 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div>
           <h1 class="page-title">Gestao de Imposto de Renda</h1>
           <p class="text-muted">Gerenciamento de informes de rendimentos para investidores</p>
         </div>
-        <div class="flex gap-10">
-          <select class="form-input" style="width: auto;">
-            <option>Ano 2024</option>
-            <option>Ano 2023</option>
-            <option>Ano 2022</option>
+        <div style="min-width: 180px;">
+          <select class="form-input" style="padding: 10px 14px; font-size: 0.95rem;">
+            <option value="2025" selected>2025 (IRPF 2026)</option>
+            <option value="2024">2024 (IRPF 2025)</option>
+            <option value="2023">2023 (IRPF 2024)</option>
+            <option value="2022">2022 (IRPF 2023)</option>
+            <option value="2021">2021 (IRPF 2022)</option>
           </select>
         </div>
       </div>
@@ -53,7 +55,7 @@
         <div class="kpi-card">
           <div class="kpi-label">Clientes com Movimentacao</div>
           <div class="kpi-value">1.892</div>
-          <div class="kpi-change">em 2024</div>
+          <div class="kpi-change">em 2025</div>
         </div>
         <div class="kpi-card">
           <div class="kpi-label">Informes Gerados</div>
@@ -74,7 +76,7 @@
 
       <!-- Alert -->
       <div class="alert alert-warning">
-        <i class="bi bi-exclamation-triangle"></i> <strong>Acao Pendente:</strong> Os informes de rendimentos do ano-calendario 2024 devem ser disponibilizados ate 28/02/2026. O processamento pode ser iniciado a partir de 15/01/2026.
+        <i class="bi bi-exclamation-triangle"></i> <strong>Acao Pendente:</strong> Os informes de rendimentos do ano-calendario 2025 devem ser disponibilizados ate 28/02/2026. O processamento pode ser iniciado a partir de 15/01/2026.
       </div>
 
       <!-- Workflow Steps -->
@@ -120,7 +122,7 @@
         <!-- Resumo de Rendimentos -->
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title">Resumo de Rendimentos 2024</h3>
+            <h3 class="card-title">Resumo de Rendimentos 2025</h3>
           </div>
 
           <div style="display: flex; flex-direction: column; gap: 15px;">
@@ -193,7 +195,7 @@
       <!-- Investors with IR Data -->
       <div class="card mt-20">
         <div class="card-header flex-between">
-          <h3 class="card-title">Clientes com Rendimentos em 2024</h3>
+          <h3 class="card-title">Clientes com Rendimentos em 2025</h3>
           <div class="flex gap-10">
             <input type="text" class="form-input" placeholder="Buscar por CPF ou nome..." style="width: 250px;">
             <div class="dropdown" style="position: relative;">
@@ -281,12 +283,15 @@
           </table>
         </div>
 
-        <div class="flex-between mt-20">
-          <p class="text-muted">Mostrando 1-4 de 1.892 investidores</p>
-          <div class="flex gap-10">
-            <button class="btn btn-outline btn-sm" disabled>Anterior</button>
-            <button class="btn btn-outline btn-sm">Proximo</button>
-          </div>
+        <div class="pagination-wrapper">
+          <span class="pagination-info">Mostrando <strong>1-4</strong> de <strong>1.892</strong></span>
+          <nav class="pagination-minimal">
+            <button class="page-item nav-arrow disabled"><i class="bi bi-chevron-left"></i></button>
+            <button class="page-item active">1</button>
+            <button class="page-item">2</button>
+            <button class="page-item">3</button>
+            <button class="page-item nav-arrow"><i class="bi bi-chevron-right"></i></button>
+          </nav>
         </div>
       </div>
 
