--- a/pages/admin/oferta-detalhe.html
+++ b/pages/admin/oferta-detalhe.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-admin">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar sidebar-dark">
@@ -32,12 +32,12 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div class="flex gap-15" style="align-items: center;">
           <a href="ofertas.html" class="btn btn-outline btn-sm"><i class="bi bi-arrow-left"></i></a>
-          <div style="width: 60px; height: 60px; background: linear-gradient(135deg, #2563eb, #1d4ed8); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem; font-weight: bold;">TS</div>
+          <div style="width: 60px; height: 60px; background: linear-gradient(135deg, var(--primary-dark), var(--primary-dark)); border-radius: 12px; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem; font-weight: bold;">TS</div>
           <div>
             <div class="flex gap-10" style="align-items: center;">
               <h1 class="page-title">TechStart Inovacao</h1>
