--- a/pages/investidor/carteira.html
+++ b/pages/investidor/carteira.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-investidor">
   <div class="dashboard">
     <aside class="sidebar">
       <div class="sidebar-logo">
@@ -28,7 +28,7 @@
     <div class="mobile-overlay" onclick="closeMobileMenus()"></div>
 
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div>
@@ -39,7 +39,7 @@
       </div>
 
       <!-- Balance Card Compacto -->
-      <div style="background: linear-gradient(135deg, var(--primary), #1d4ed8); color: white; border-radius: var(--radius); padding: 20px; margin-bottom: 16px;">
+      <div style="background: linear-gradient(135deg, var(--primary), var(--primary-dark)); color: white; border-radius: var(--radius); padding: 20px; margin-bottom: 16px;">
         <div class="flex-between" style="flex-wrap: wrap; gap: 16px;">
           <div>
             <div style="font-size: 0.8rem; opacity: 0.9;">Patrimonio Total</div>
@@ -103,27 +103,32 @@
           <button class="btn btn-outline btn-sm" style="color: var(--success);">Com Resgate (1)</button>
         </div>
 
-        <!-- Investment Items Compactos -->
+        <!-- Investment Items Compactos - MELHORADO -->
         <div class="investment-item-compact success" onclick="showModal('detalheTechStartModal')">
-          <div class="inv-logo-compact" style="background: linear-gradient(135deg, var(--primary), #1d4ed8);">TS</div>
+          <div class="inv-logo-compact" style="background: linear-gradient(135deg, var(--primary), var(--primary-dark));">TS</div>
           <div class="inv-info-compact">
             <div class="inv-title-compact">TechStart Inovacao</div>
             <div class="inv-meta-compact">
-              <span class="badge-compact" style="background: #7c3aed; color: white;">Equity</span> Tecnologia • 15/01/2026
+              <span class="badge-compact" style="background: #7c3aed; color: white;">Equity</span>
+              <span>Tecnologia</span>
+              <span class="text-muted">• 15/01/2026</span>
             </div>
           </div>
           <div class="inv-values-compact">
             <div class="inv-value-item-compact">
-              <div class="inv-value-label-compact">Valor</div>
+              <div class="inv-value-label-compact">Investido</div>
               <div class="inv-value-number-compact">R$ 5.000</div>
             </div>
             <div class="inv-value-item-compact">
-              <div class="inv-value-label-compact">Equity</div>
-              <div class="inv-value-number-compact">1.5%</div>
+              <div class="inv-value-label-compact">Participacao</div>
+              <div class="inv-value-number-compact" style="color: var(--primary);">1.5%</div>
+            </div>
+            <div class="inv-value-item-compact">
+              <div class="inv-value-label-compact">Status</div>
+              <div class="inv-value-number-compact"><span class="badge-compact badge-success"><i class="bi bi-check-circle"></i> Confirmado</span></div>
             </div>
           </div>
-          <span class="badge-compact badge-success"><i class="bi bi-check"></i></span>
-          <i class="bi bi-chevron-right text-muted"></i>
+          <i class="bi bi-chevron-right text-muted" style="font-size: 1.2rem;"></i>
         </div>
 
         <div class="investment-item-compact info" onclick="showModal('detalheHealthTechModal')">
@@ -131,21 +136,26 @@
           <div class="inv-info-compact">
             <div class="inv-title-compact">HealthTech Solutions</div>
             <div class="inv-meta-compact">
-              <span class="badge-compact" style="background: #7c3aed; color: white;">Equity</span> Saude • 05/12/2025
+              <span class="badge-compact" style="background: #7c3aed; color: white;">Equity</span>
+              <span>Saude</span>
+              <span class="text-muted">• 05/12/2025</span>
             </div>
           </div>
           <div class="inv-values-compact">
             <div class="inv-value-item-compact">
-              <div class="inv-value-label-compact">Valor</div>
+              <div class="inv-value-label-compact">Investido</div>
               <div class="inv-value-number-compact">R$ 7.000</div>
             </div>
             <div class="inv-value-item-compact">
               <div class="inv-value-label-compact">Dividendos</div>
               <div class="inv-value-number-compact" style="color: var(--success);">+R$ 850</div>
             </div>
+            <div class="inv-value-item-compact">
+              <div class="inv-value-label-compact">Status</div>
+              <div class="inv-value-number-compact"><span class="badge-compact badge-info"><i class="bi bi-trophy"></i> Concluida</span></div>
+            </div>
           </div>
-          <span class="badge-compact badge-info"><i class="bi bi-trophy"></i></span>
-          <i class="bi bi-chevron-right text-muted"></i>
+          <i class="bi bi-chevron-right text-muted" style="font-size: 1.2rem;"></i>
         </div>
 
         <div class="investment-item-compact success" onclick="showModal('detalheCRAModal')">
@@ -153,66 +163,81 @@
           <div class="inv-info-compact">
             <div class="inv-title-compact">Cooperativa AgroVerde</div>
             <div class="inv-meta-compact">
-              <span class="badge-compact" style="background: #22c55e; color: white;">CRA</span> Agro • Venc. 01/2028
+              <span class="badge-compact" style="background: #22c55e; color: white;">CRA</span>
+              <span>Agronegocio</span>
+              <span class="text-muted">• Venc. 01/2028</span>
             </div>
           </div>
           <div class="inv-values-compact">
             <div class="inv-value-item-compact">
-              <div class="inv-value-label-compact">Valor</div>
+              <div class="inv-value-label-compact">Investido</div>
               <div class="inv-value-number-compact">R$ 3.500</div>
             </div>
             <div class="inv-value-item-compact">
               <div class="inv-value-label-compact">Taxa</div>
               <div class="inv-value-number-compact" style="color: #22c55e;">CDI+4,5%</div>
             </div>
+            <div class="inv-value-item-compact">
+              <div class="inv-value-label-compact">Status</div>
+              <div class="inv-value-number-compact"><span class="badge-compact badge-success"><i class="bi bi-check-circle"></i> Confirmado</span></div>
+            </div>
           </div>
-          <span class="badge-compact badge-success"><i class="bi bi-check"></i></span>
-          <i class="bi bi-chevron-right text-muted"></i>
+          <i class="bi bi-chevron-right text-muted" style="font-size: 1.2rem;"></i>
         </div>
 
         <!-- Item com RESGATE DISPONIVEL -->
-        <div class="investment-item-compact warning" onclick="showModal('detalheCRIModal')" style="border-left-color: #f59e0b;">
+        <div class="investment-item-compact warning" onclick="showModal('detalheCRIModal')">
           <div class="inv-logo-compact" style="background: linear-gradient(135deg, #0891b2, #0e7490);">CRI</div>
           <div class="inv-info-compact">
             <div class="inv-title-compact">Residencial Parque das Flores</div>
             <div class="inv-meta-compact">
-              <span class="badge-compact" style="background: #0891b2; color: white;">CRI</span> Imobiliario • Venc. 01/2029
+              <span class="badge-compact" style="background: #0891b2; color: white;">CRI</span>
+              <span>Imobiliario</span>
+              <span class="text-muted">• Venc. 01/2029</span>
             </div>
           </div>
           <div class="inv-values-compact">
             <div class="inv-value-item-compact">
-              <div class="inv-value-label-compact">Valor</div>
+              <div class="inv-value-label-compact">Investido</div>
               <div class="inv-value-number-compact">R$ 3.000</div>
             </div>
             <div class="inv-value-item-compact">
               <div class="inv-value-label-compact">Taxa</div>
               <div class="inv-value-number-compact" style="color: #0891b2;">IPCA+8%</div>
             </div>
+            <div class="inv-value-item-compact">
+              <div class="inv-value-label-compact">Status</div>
+              <div class="inv-value-number-compact"><span class="badge-compact badge-warning"><i class="bi bi-unlock"></i> Resgate Disp.</span></div>
+            </div>
           </div>
-          <span class="badge-compact" style="background: #fef3c7; color: #92400e;"><i class="bi bi-unlock"></i> Resgate</span>
-          <i class="bi bi-chevron-right text-muted"></i>
+          <i class="bi bi-chevron-right text-muted" style="font-size: 1.2rem;"></i>
         </div>
 
-        <div class="investment-item-compact success" onclick="showModal('detalheCRModal')">
+        <div class="investment-item-compact" onclick="showModal('detalheCRModal')" style="border-left-color: #8b5cf6;">
           <div class="inv-logo-compact" style="background: linear-gradient(135deg, #8b5cf6, #7c3aed);">CR</div>
           <div class="inv-info-compact">
             <div class="inv-title-compact">SolarTech Energia</div>
             <div class="inv-meta-compact">
-              <span class="badge-compact" style="background: #8b5cf6; color: white;">CR</span> Energia • Venc. 12/2029
+              <span class="badge-compact" style="background: #8b5cf6; color: white;">CR</span>
+              <span>Energia</span>
+              <span class="text-muted">• Venc. 12/2029</span>
             </div>
           </div>
           <div class="inv-values-compact">
             <div class="inv-value-item-compact">
-              <div class="inv-value-label-compact">Valor</div>
+              <div class="inv-value-label-compact">Investido</div>
               <div class="inv-value-number-compact">R$ 0</div>
             </div>
             <div class="inv-value-item-compact">
               <div class="inv-value-label-compact">Taxa</div>
               <div class="inv-value-number-compact" style="color: #8b5cf6;">IPCA+10%</div>
             </div>
+            <div class="inv-value-item-compact">
+              <div class="inv-value-label-compact">Status</div>
+              <div class="inv-value-number-compact"><span class="badge-compact badge-secondary"><i class="bi bi-clock"></i> Em Captacao</span></div>
+            </div>
           </div>
-          <span class="badge-compact badge-secondary">Em Captacao</span>
-          <i class="bi bi-chevron-right text-muted"></i>
+          <i class="bi bi-chevron-right text-muted" style="font-size: 1.2rem;"></i>
         </div>
 
         <div class="alert alert-info mt-15" style="font-size: 0.85rem; padding: 12px;">
@@ -371,7 +396,7 @@
     <div class="modal" style="max-width: 550px;">
       <div class="modal-header" style="padding: 16px;">
         <div class="flex gap-10" style="align-items: center;">
-          <div style="width: 40px; height: 40px; border-radius: 8px; background: linear-gradient(135deg, var(--primary), #1d4ed8); color: white; display: flex; align-items: center; justify-content: center; font-weight: bold;">TS</div>
+          <div style="width: 40px; height: 40px; border-radius: 8px; background: linear-gradient(135deg, var(--primary), var(--primary-dark)); color: white; display: flex; align-items: center; justify-content: center; font-weight: bold;">TS</div>
           <div>
             <h3 style="margin: 0; font-size: 1rem;">TechStart Inovacao</h3>
             <p class="text-muted" style="margin: 0; font-size: 0.8rem;">Equity • Tecnologia</p>
