--- a/pages/investidor/imposto-renda.html
+++ b/pages/investidor/imposto-renda.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-investidor">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar">
@@ -30,7 +30,7 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div>
@@ -41,7 +41,7 @@
 
       <!-- Alert -->
       <div class="alert alert-info">
-        <i class="bi bi-info-circle"></i> <strong>Ano-Calendario 2024:</strong> O informe de rendimentos para declaracao do IR 2026 estara disponivel a partir de 28/02/2026, conforme prazo legal.
+        <i class="bi bi-info-circle"></i> <strong>Ano-Calendario 2025:</strong> O informe de rendimentos para declaracao do IR 2026 estara disponivel a partir de 28/02/2026, conforme prazo legal.
       </div>
 
       <!-- Year Selection -->
@@ -51,15 +51,19 @@
             <h3 style="margin-bottom: 5px;">Selecione o Ano-Calendario</h3>
             <p class="text-muted">Escolha o ano para visualizar seus informes</p>
           </div>
-          <div class="flex gap-10">
-            <button class="btn btn-outline">2022</button>
-            <button class="btn btn-outline">2023</button>
-            <button class="btn btn-primary">2024</button>
+          <div style="min-width: 180px;">
+            <select class="form-input" style="padding: 10px 14px; font-size: 0.95rem;">
+              <option value="2025" selected>2025 (IRPF 2026)</option>
+              <option value="2024">2024 (IRPF 2025)</option>
+              <option value="2023">2023 (IRPF 2024)</option>
+              <option value="2022">2022 (IRPF 2023)</option>
+              <option value="2021">2021 (IRPF 2022)</option>
+            </select>
           </div>
         </div>
       </div>
 
-      <!-- Informe de Rendimentos -->
+      <!-- Informe de Rendimentos - Ano atual (em processamento) -->
       <div class="card mb-20">
         <div class="card-header flex-between">
           <div class="flex gap-15" style="align-items: center;">
@@ -67,7 +71,7 @@
               <i class="bi bi-file-earmark-text" style="font-size: 1.5rem; color: var(--primary);"></i>
             </div>
             <div>
-              <h3 class="card-title">Informe de Rendimentos 2024</h3>
+              <h3 class="card-title">Informe de Rendimentos 2025</h3>
               <p class="text-muted">Para declaracao IRPF 2026</p>
             </div>
           </div>
@@ -79,7 +83,7 @@
         </div>
 
         <p class="text-muted" style="font-size: 0.875rem;">
-          O informe incluira todos os rendimentos recebidos (dividendos, juros, amortizacoes) e movimentacoes realizadas no ano de 2024 na plataforma CrowdInvest.
+          O informe incluira todos os rendimentos recebidos (dividendos, juros, amortizacoes) e movimentacoes realizadas no ano de 2025 na plataforma CrowdInvest.
         </p>
       </div>
 
@@ -91,8 +95,8 @@
               <i class="bi bi-file-earmark-check" style="font-size: 1.5rem; color: var(--success);"></i>
             </div>
             <div>
-              <h3 class="card-title">Informe de Rendimentos 2023</h3>
-              <p class="text-muted">Para declaracao IRPF 2024</p>
+              <h3 class="card-title">Informe de Rendimentos 2024</h3>
+              <p class="text-muted">Para declaracao IRPF 2025</p>
             </div>
           </div>
           <span class="badge badge-success"><i class="bi bi-check-circle"></i> Disponivel</span>
@@ -148,7 +152,7 @@
                   <br><small class="text-muted">Participacao: 0.5%</small>
                 </td>
                 <td>12.345.678/0001-90</td>
-                <td>15/03/2023</td>
+                <td>15/03/2024</td>
                 <td>R$ 5.000,00</td>
                 <td>R$ 5.000,00</td>
               </tr>
@@ -158,7 +162,7 @@
                   <br><small class="text-muted">Participacao: 0.3%</small>
                 </td>
                 <td>98.765.432/0001-10</td>
-                <td>10/06/2023</td>
+                <td>10/06/2024</td>
                 <td>R$ 3.000,00</td>
                 <td>R$ 3.000,00</td>
               </tr>
@@ -168,7 +172,7 @@
                   <br><small class="text-muted">Participacao: 1.2%</small>
                 </td>
                 <td>11.222.333/0001-44</td>
-                <td>20/09/2023</td>
+                <td>20/09/2024</td>
                 <td>R$ 10.000,00</td>
                 <td>R$ 10.000,00</td>
               </tr>
@@ -196,7 +200,7 @@
       <!-- Rendimentos Recebidos -->
       <div class="card mb-20">
         <div class="card-header">
-          <h3 class="card-title"><i class="bi bi-cash-coin"></i> Rendimentos Recebidos em 2023</h3>
+          <h3 class="card-title"><i class="bi bi-cash-coin"></i> Rendimentos Recebidos em 2024</h3>
           <p class="text-muted">Detalhamento para ficha "Rendimentos Sujeitos a Tributacao Exclusiva"</p>
         </div>
 
@@ -297,7 +301,7 @@
   <div id="visualizarInformeModal" class="modal-overlay" style="display: none;">
     <div class="modal" style="max-width: 700px;">
       <div class="modal-header">
-        <h3>Informe de Rendimentos 2023</h3>
+        <h3>Informe de Rendimentos 2024</h3>
         <button class="modal-close" onclick="hideModal('visualizarInformeModal')">&times;</button>
       </div>
 
@@ -320,7 +324,7 @@
           </div>
           <div class="text-right">
             <p class="text-muted" style="font-size: 0.75rem;">ANO-CALENDARIO</p>
-            <strong style="font-size: 1.5rem;">2023</strong>
+            <strong style="font-size: 1.5rem;">2024</strong>
           </div>
         </div>
       </div>
