--- a/pages/investidor/investimento-detalhe.html
+++ b/pages/investidor/investimento-detalhe.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-investidor">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar">
@@ -30,7 +30,7 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div class="flex gap-10" style="align-items: center;">
@@ -44,7 +44,7 @@
       </div>
 
       <!-- Investment Summary -->
-      <div class="card" style="background: linear-gradient(135deg, var(--primary), #1d4ed8); color: white; margin-bottom: 20px;">
+      <div class="card" style="background: linear-gradient(135deg, var(--primary), var(--primary-dark)); color: white; margin-bottom: 20px;">
         <div class="grid-2" style="gap: 30px; align-items: center;">
           <div>
             <p style="opacity: 0.9; margin-bottom: 5px;">Seu investimento</p>
