--- a/pages/investidor/meus-investimentos.html
+++ b/pages/investidor/meus-investimentos.html
@@ -7,7 +7,7 @@
   <meta http-equiv="refresh" content="0; url=carteira.html">
   <script>window.location.href = "carteira.html";</script>
 </head>
-<body>
+<body class="theme-investidor">
   <p>Redirecionando para <a href="carteira.html">Minha Carteira</a>...</p>
 </body>
 </html>
