--- a/pages/investidor/oferta-detalhe-cra.html
+++ b/pages/investidor/oferta-detalhe-cra.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-investidor">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar">
@@ -30,13 +30,13 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <a href="ofertas.html" style="color: var(--text-muted); text-decoration: none; margin-bottom: 20px; display: inline-block;">&larr; Voltar para ofertas</a>
 
-      <div class="grid-2" style="gap: 40px;">
-        <!-- Left Column -->
-        <div>
+      <div class="offer-detail-layout">
+        <!-- Left Column - Main Content -->
+        <div class="offer-main">
           <div class="offer-image" style="height: 300px; border-radius: var(--radius); font-size: 5rem; background: linear-gradient(135deg, #22c55e, #16a34a);">CRA</div>
 
           <div class="card mt-20">
@@ -128,8 +128,8 @@
         </div>
 
         <!-- Right Column - Investment Box -->
-        <div>
-          <div class="card" style="position: sticky; top: 20px;">
+        <div class="offer-sidebar">
+          <div class="card" style="position: sticky; top: 100px;">
             <div class="flex-between mb-20">
               <span class="badge" style="background: #22c55e; color: white;">CRA</span>
               <span class="badge badge-success">Agronegocio</span>
