--- a/pages/investidor/saque.html
+++ b/pages/investidor/saque.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-investidor">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar">
@@ -30,7 +30,7 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div class="flex gap-10" style="align-items: center;">
@@ -43,7 +43,7 @@
       </div>
 
       <!-- Saldo Disponivel -->
-      <div class="card" style="background: linear-gradient(135deg, #2563eb, #1d4ed8); color: white; margin-bottom: 30px;">
+      <div class="card" style="background: linear-gradient(135deg, var(--primary-dark), var(--primary-dark)); color: white; margin-bottom: 30px;">
         <div class="flex-between" style="align-items: center;">
           <div>
             <p style="opacity: 0.8;">Saldo Disponivel para Saque</p>
