--- a/pages/parceiro/dashboard.html
+++ b/pages/parceiro/dashboard.html
@@ -7,13 +7,31 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-parceiro">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="../../index.html" class="logo">CrowdInvest</a>
         <span class="badge" style="background: white; color: #059669; margin-left: 10px;">Parceiro</span>
+      </div>
+      <!-- Profile Mode Card - Elegante -->
+      <div class="profile-mode-card" id="profileModeCard">
+        <div class="profile-mode-current">
+          <div class="profile-mode-icon emissor" id="profileIcon">
+            <i class="bi bi-broadcast"></i>
+          </div>
+          <div class="profile-mode-info">
+            <div class="profile-mode-label">Visualizando como</div>
+            <div class="profile-mode-name" id="profileName">Emissor</div>
+          </div>
+          <span class="profile-mode-tag emissor" id="profileTag">
+            <i class="bi bi-broadcast"></i> Emissor
+          </span>
+        </div>
+        <button class="profile-mode-switch-btn" onclick="showModal('selecionarPerfilModal')">
+          <i class="bi bi-arrow-left-right"></i> Trocar modo de acesso
+        </button>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html" class="active"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -32,7 +50,7 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div>
@@ -240,6 +258,145 @@
     </main>
   </div>
 
+  <!-- Modal Selecionar Perfil -->
+  <div class="modal-overlay" id="selecionarPerfilModal" style="display: none;">
+    <div class="modal profile-select-modal">
+      <div class="modal-header">
+        <h3><i class="bi bi-person-gear"></i> Modo de Acesso</h3>
+        <button class="modal-close" onclick="hideModal('selecionarPerfilModal')">&times;</button>
+      </div>
+
+      <p class="text-muted mb-20">Escolha como deseja visualizar e operar na plataforma. Voce pode trocar a qualquer momento.</p>
+
+      <!-- Opcao Emissor -->
+      <div class="profile-option emissor active" id="optionEmissor" onclick="selectProfileOption('emissor')">
+        <div class="profile-option-icon emissor">
+          <i class="bi bi-broadcast"></i>
+        </div>
+        <div class="profile-option-content">
+          <div class="profile-option-title">
+            Emissor
+            <span class="badge badge-success" style="font-size: 0.65rem;">Atual</span>
+          </div>
+          <p class="profile-option-desc">Crie e gerencie suas proprias ofertas de investimento. Acompanhe captacoes, investidores e comunicados.</p>
+          <div class="profile-option-features">
+            <span class="profile-option-feature"><i class="bi bi-check"></i> Criar ofertas</span>
+            <span class="profile-option-feature"><i class="bi bi-check"></i> Gerenciar captacao</span>
+            <span class="profile-option-feature"><i class="bi bi-check"></i> Comunicados</span>
+            <span class="profile-option-feature"><i class="bi bi-check"></i> Ver investidores</span>
+          </div>
+        </div>
+        <div class="profile-option-check">
+          <i class="bi bi-check"></i>
+        </div>
+      </div>
+
+      <!-- Opcao Distribuidor -->
+      <div class="profile-option distribuidor" id="optionDistribuidor" onclick="selectProfileOption('distribuidor')">
+        <div class="profile-option-icon distribuidor">
+          <i class="bi bi-diagram-3"></i>
+        </div>
+        <div class="profile-option-content">
+          <div class="profile-option-title">Distribuidor</div>
+          <p class="profile-option-desc">Distribua ofertas de terceiros para sua base de clientes. Ideal para assessores e corretoras.</p>
+          <div class="profile-option-features">
+            <span class="profile-option-feature"><i class="bi bi-check"></i> Distribuir ofertas</span>
+            <span class="profile-option-feature"><i class="bi bi-check"></i> Gerenciar clientes</span>
+            <span class="profile-option-feature"><i class="bi bi-check"></i> Comissoes</span>
+            <span class="profile-option-feature"><i class="bi bi-check"></i> Relatorios</span>
+          </div>
+        </div>
+        <div class="profile-option-check">
+          <i class="bi bi-check"></i>
+        </div>
+      </div>
+
+      <div class="alert alert-info" style="font-size: 0.85rem;">
+        <i class="bi bi-info-circle"></i> Seu acesso como <strong>Emissor + Distribuidor</strong> permite alternar entre os dois modos. As informacoes e menus serao adaptados conforme o modo selecionado.
+      </div>
+
+      <div class="flex gap-10 mt-20">
+        <button class="btn btn-outline" onclick="hideModal('selecionarPerfilModal')" style="flex: 1;">Cancelar</button>
+        <button class="btn btn-primary" onclick="confirmarPerfil()" style="flex: 1;">
+          <i class="bi bi-check-lg"></i> Confirmar
+        </button>
+      </div>
+    </div>
+  </div>
+
   <script src="../../js/app.js"></script>
+  <script>
+    let selectedProfile = 'emissor';
+
+    // Selecionar opcao de perfil no modal
+    function selectProfileOption(profile) {
+      selectedProfile = profile;
+
+      // Atualizar visual das opcoes
+      document.querySelectorAll('.profile-option').forEach(opt => {
+        opt.classList.remove('active');
+      });
+      document.getElementById('option' + profile.charAt(0).toUpperCase() + profile.slice(1)).classList.add('active');
+    }
+
+    // Confirmar selecao de perfil
+    function confirmarPerfil() {
+      // Atualizar card na sidebar
+      const icon = document.getElementById('profileIcon');
+      const name = document.getElementById('profileName');
+      const tag = document.getElementById('profileTag');
+
+      if (selectedProfile === 'emissor') {
+        icon.className = 'profile-mode-icon emissor';
+        icon.innerHTML = '<i class="bi bi-broadcast"></i>';
+        name.textContent = 'Emissor';
+        tag.className = 'profile-mode-tag emissor';
+        tag.innerHTML = '<i class="bi bi-broadcast"></i> Emissor';
+      } else {
+        icon.className = 'profile-mode-icon distribuidor';
+        icon.innerHTML = '<i class="bi bi-diagram-3"></i>';
+        name.textContent = 'Distribuidor';
+        tag.className = 'profile-mode-tag distribuidor';
+        tag.innerHTML = '<i class="bi bi-diagram-3"></i> Distrib.';
+      }
+
+      // Atualizar conteudo da pagina
+      switchProfileContent(selectedProfile);
+
+      // Fechar modal
+      hideModal('selecionarPerfilModal');
+
+      // Salvar preferencia
+      localStorage.setItem('parceiro_profile', selectedProfile);
+    }
+
+    // Trocar conteudo baseado no perfil
+    function switchProfileContent(profile) {
+      const emissorContent = document.querySelectorAll('.emissor-content');
+      const distribuidorContent = document.querySelectorAll('.distribuidor-content');
+      const pageTitle = document.querySelector('.page-title');
+      const pageSubtitle = document.querySelector('.page-header .text-muted');
+
+      if (profile === 'emissor') {
+        emissorContent.forEach(el => el.style.display = '');
+        distribuidorContent.forEach(el => el.style.display = 'none');
+        if (pageTitle) pageTitle.textContent = 'Ola, TechStart!';
+        if (pageSubtitle) pageSubtitle.textContent = 'Acompanhe sua oferta em tempo real';
+      } else {
+        emissorContent.forEach(el => el.style.display = 'none');
+        distribuidorContent.forEach(el => el.style.display = '');
+        if (pageTitle) pageTitle.textContent = 'Portal Distribuidor';
+        if (pageSubtitle) pageSubtitle.textContent = 'Distribua ofertas para seus clientes';
+      }
+    }
+
+    // Inicializar perfil salvo
+    document.addEventListener('DOMContentLoaded', function() {
+      const saved = localStorage.getItem('parceiro_profile') || 'emissor';
+      selectedProfile = saved;
+      selectProfileOption(saved);
+      confirmarPerfil();
+    });
+  </script>
 </body>
 </html>
