--- a/pages/parceiro/oferta-detalhe.html
+++ b/pages/parceiro/oferta-detalhe.html
@@ -7,13 +7,25 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../../css/style.css">
 </head>
-<body>
+<body class="theme-parceiro">
   <div class="dashboard">
     <!-- Sidebar -->
     <aside class="sidebar sidebar-green">
       <div class="sidebar-logo">
-        <a href="../../index.html" class="logo" style="color: white;">CrowdInvest</a>
+        <a href="../../index.html" class="logo">CrowdInvest</a>
         <span class="badge" style="background: white; color: #059669; margin-left: 10px;">Parceiro</span>
+      </div>
+      <!-- Profile Switcher na Sidebar -->
+      <div class="sidebar-profile-switcher">
+        <div class="switcher-label">Visualizar como:</div>
+        <div class="switcher-buttons">
+          <button class="switcher-btn active" onclick="switchProfile('emissor', this)">
+            <i class="bi bi-broadcast"></i> Emissor
+          </button>
+          <button class="switcher-btn" onclick="switchProfile('distribuidor', this)">
+            <i class="bi bi-diagram-3"></i> Distrib.
+          </button>
+        </div>
       </div>
       <ul class="sidebar-menu">
         <li><a href="dashboard.html"><i class="bi bi-speedometer2"></i> Dashboard</a></li>
@@ -32,7 +44,7 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i> Menu</button>
+      <button class="menu-toggle" onclick="toggleSidebar()"><i class="bi bi-list"></i><span> Menu</span></button>
 
       <div class="page-header">
         <div class="flex gap-15" style="align-items: center;">
