--- a/pages/redefinir-senha.html
+++ b/pages/redefinir-senha.html
@@ -14,7 +14,7 @@
     </div>
     <div class="auth-box">
       <div class="text-center mb-30">
-        <div style="width: 80px; height: 80px; background: linear-gradient(135deg, var(--primary), #1d4ed8); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
+        <div style="width: 80px; height: 80px; background: linear-gradient(135deg, var(--primary), var(--primary-dark)); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
           <i class="bi bi-shield-lock" style="font-size: 2rem; color: white;"></i>
         </div>
         <h2>Criar Nova Senha</h2>
